syntax = "proto3";

package go.micro.api.platform;

service Platform {
    rpc CreateService(CreateServiceRequest) returns (CreateServiceResponse) {};
    rpc ReadService(ReadServiceRequest) returns (ReadServiceResponse) {};
    rpc UpdateService(UpdateServiceRequest) returns (UpdateServiceResponse) {};
    rpc DeleteService(DeleteServiceRequest) returns (DeleteServiceResponse) {};
    rpc ListServices(ListServicesRequest) returns (ListServicesResponse) {};
}

message CreateServiceRequest {
    Service service = 1;
}

message CreateServiceResponse {}

message ReadServiceRequest {
    Service service = 1;
}

message ReadServiceResponse {
    repeated Service services = 1;
}

message UpdateServiceRequest {
    Service service = 1;
}

message UpdateServiceResponse {}

message DeleteServiceRequest {
    Service service = 1;
}

message DeleteServiceResponse {}

message ListServicesRequest {}

message ListServicesResponse {
    repeated Service services = 1;
}

message Service {
    string name = 1;
    string version = 2;
    string source = 3;
    string type = 4;
    map<string,string> metadata = 5;
}